[gd_scene load_steps=2 format=3 uid="uid://dwqvb3hnk5mjy"]

[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id="1_game_over"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_over")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatsTitle" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Final Stats"
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wave Reached: 0"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Enemies Killed: 0"
horizontal_alignment = 1

[node name="EvolvedLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Digimon Evolved: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="TryAgainButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Main Menu"
